@@ -11,6 +11,14 @@ ChangeLog
 		  enough.
 	Note: Some other improvements are of course possible; but any more sophisticated 
 	      spreadsheet-like interface would require some significant effort. 
+	      
+	Fixed issue #115: "Allow tab delimiter when importing data in voc2rdf"
+		Now, two buttons are included, both with options to select the desired separator: 
+			- "Import" allows to enter terms from a CSV formatted text: the user specifies what
+			  character should be interpreted as the field separator
+			- "Export" displays the current table in CSV format (for the user to copy-n-paste somewhere);
+			  the user indicates the desired separator character.
+		- the following separators are possible: comma (,), sem-colon (;), tab, and pipe (|)
 		
 2009-04-07
 	Implemented issue #84: "allow user-given namespace (URI) in voc2rdf"
